# mkdocs-gen-nav-plugin

./: README.md  pypi.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: development.md
examples/example-with-material/: mkdocs.yml
examples/example-with-material/docs/: d-menu.md  index.md
examples/example-with-material/docs/00_blog/_posts/: blog-article-1.md
examples/example-with-material/docs/01_a-second-menu/: index.md
examples/example-with-material/docs/_partials/: partial.md
examples/example-with-material/docs/c-menu/: index.md  sub-c-menu.md
src/mkdocs_gen_nav_plugin/: plugin.py
tests/: test_plugin.py  test_testutil.py  testutil.py
