[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-gen-nav-plugin"
version = "0.2.0"
authors = [
  { name="soonoh", email="soonoh.jung@gmail.com" },
  { name="FrozenSource", email="bram.nijenkamp@dataacess.eu"}
]
description = "Mkdocs plugin to generate nav list from docs dir"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
    "mkdocs>=1.4.2",
]

[project.urls]
"Homepage" = "https://github.com/vrerv/mkdocs-gen-nav-plugin"
"Bug Tracker" = "https://github.com/vrerv/mkdocs-gen-nav-plugin/issues"

[project.entry-points."mkdocs.plugins"]
gen_nav = "mkdocs_gen_nav_plugin.plugin:GenNavPlugin"

[tool.hatch.envs.dev]
type = "conda"